# ayase

./: Cargo.toml  Justfile  ROM_SPEC.md  SPEC.md  asda.md  assembly-spec.md  assembly.md  program.aya
aya-assembler/: Cargo.toml
aya-assembly/: Cargo.toml
aya-assembly/src/: codegen.rs  compiler.rs  lib.rs  mod_resolver.rs  utils.rs
aya-bitmap/: Cargo.toml
aya-bitmap/src/: color.rs  consts.rs  decoder.rs  error.rs  lib.rs
aya-cli/: Cargo.toml
aya-cli/src/: main.rs
aya-compiler/: Cargo.toml
aya-compiler/src/: lib.rs
aya-console/: Cargo.toml
aya-console/src/: lib.rs  main.rs  rom_loader.rs
aya-console/src/input/: mod.rs  raylib.rs
aya-console/src/memory/: background_memory.rs  interface_memory.rs  linear_memory.rs  memory_mapper.rs  mod.rs  output_device.rs  program_memory.rs  sprite_memory.rs  stack_memory.rs  stdout_memory.rs  tile_memory.rs  video_memory.rs
aya-console/src/renderer/: error.rs  mod.rs  raylib.rs
aya-core/: Cargo.toml
aya-core/src/: bytecode.rs  cpu.rs  instruction.rs  lib.rs  memory.rs  op_code.rs  register.rs  word.rs
aya-cpu/: Cargo.toml
aya-cpu/src/: cpu.rs  error.rs  instruction.rs  lib.rs  op_code.rs  register.rs  word.rs
aya-dbg/: Cargo.toml
aya-dbg/src/: container.rs  main.rs
aya-debugger/: Cargo.toml
aya-debugger/src/: container.rs  debug_memory.rs  main.rs  root.rs  sidebar.rs  style.rs
aya-frontend/: Cargo.toml
aya-frontend/src/: main.rs
aya-game/: Cargo.toml
aya-game/src/: main.rs
aya-game/src/memory/: memory_mapper.rs  mod.rs  program_memory.rs  sprite_memory.rs  video_memory.rs
aya-packer/: Cargo.toml
aya-packer/src/: error.rs  main.rs
aya-packer/src/config/: lexer.rs  mod.rs  parser.rs
aya-packer/src/config/snapshots/: aya_packer__config__lexer__tests__simple_config.snap  aya_packer__config__lexer__tests__simple_config.snap.new  aya_packer__config__lexer__tests__sprite_array.snap  aya_packer__config__lexer__tests__sprite_array.snap.new  aya_packer__config__parser__tests__simple_config.snap.new  aya_packer__config__parser__tests__sprite_array.snap.new
aya-packer/src/rom/: error.rs  mod.rs  sprites.rs
aya-parser/: Cargo.toml
aya-parser/src/: ast.rs  common.rs  expressions.rs  formats.rs  lib.rs  (+3 more)
samples/: a.out  after_frame.s  anything  aya.cfg  int.aya  main.aya  main.s  module.aya  other.aya  output.aya  program.aya  secondary.aya
src/: addressable.rs  main.rs
(+375 files in other folders)
