[workspace]
members = [
    "aya-cpu",
    "aya-debugger",
    "aya-console",
    "aya-bitmap",
    "aya-packer",
    "aya-assembly",
]
default-members = ["aya-console", "aya-debugger", "aya-packer"]
resolver = "2"

[workspace.dependencies]
aya-cpu = { path = "aya-cpu" }
aya-debugger = { path = "aya-debugger" }
aya-assembly = { path = "aya-assembly" }
aya-console = { path = "aya-console" }
aya-bitmap = { path = "aya-bitmap" }
