[workspace]
members = [
    "aya-cpu",
    "aya-console",
    "aya-bitmap",
    "aya-packer",
    "aya-assembly",
]
default-members = [
    "aya-console",
    "aya-packer"
]
resolver = "2"

[workspace.dependencies]
aya-cpu = { path = "aya-cpu" }
aya-assembly = { path = "aya-assembly" }
aya-console = { path = "aya-console" }
aya-bitmap = { path = "aya-bitmap" }
