[package]
name = "aya-game"
edition = "2021"
version = "0.1.0"

[dependencies]
aya-cpu.workspace = true
aya-compiler.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
raylib = { version = "5.0.2", features = ["wayland"] }

[target.'cfg(target_os = "macos")'.dependencies]
raylib = { version = "5.0.2", features = ["opengl_33"] }
